# fsm-assistant

./: .gitignore  CONTEXT.md  README.md  spec.md
backend/: README.md  pyproject.toml
backend/src/fsm_assistant/: __init__.py  api.py  app_db.py  backtest.py  config.py  guarded.py  llm.py  rule_store.py  summary_drafter.py  translator.py
backend/src/fsm_assistant/evals/: __init__.py  cli.py  fixture.py  golden_set.py  lints.py  matcher.py  rule_patterns.py  rule_runner.py  runner.py
backend/tests/: conftest.py  test_backtest.py  test_eval_lints.py  test_eval_matcher.py  test_eval_runner.py  test_explore.py  test_guardrails.py  test_meta.py  test_rule_eval_patterns.py  test_rule_eval_runner.py  test_rules_lifecycle.py
data/: schema.sql
docs/adr/: 0001-lightgbm-baseline-over-gnn.md  0002-three-tab-workbench-over-pipeline-variants.md  0003-where-shaped-sql-in-workbench-chat-only-explore.md  0004-global-cutoff-and-monitoring-surface.md  0005-conversational-explore-run-on-request.md  0006-draft-in-run-summary-turn-workbench-llm-free.md  0007-rule-drafting-translates-segment-never-judges-risk.md
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  Explore.tsx  Rules.tsx  Workbench.tsx  api.ts  evidence.tsx  handoff.ts  score.ts
