[project]
name = "fsm-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Darren Dooley", email = "darrendooley8@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
fsm-assistant = "fsm_assistant:main"
fsm-eval = "fsm_assistant.evals.cli:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
